# mm1_pellin

./: .gitignore  CMakeLists.txt  prepare_linux.sh  prepare_win32.bat  prepare_win32_vs2013.bat  prepare_win32_vs2015.bat  prepare_win32_vs2017.bat  prepare_win32_vs2019.bat  prepare_win32_vs2022.bat  prepare_win64.bat  prepare_win64_vs2013.bat  prepare_win64_vs2015.bat  prepare_win64_vs2017.bat  prepare_win64_vs2019.bat  prepare_win64_vs2022.bat  sdl_looper_submit.cpp
doc/: iimaudio.dox
examples/: CMakeLists.txt  capture_minimal.cpp  capture_test.cpp  cellular_automata.cpp  copy_wav.cpp  empty_project.cpp  enumerate_devices.cpp  enumerate_midi_devices.cpp  fft_test.cpp  midi_sine.cpp  playback_high.cpp  playback_sine.cpp  playback_sine_high.cpp  playback_test.cpp  playback_wav.cpp  playthrough_high.cpp  record_wav.cpp  sdl_cellular_automata.cpp  sdl_drums.cpp  sdl_drums_artnet.cpp  sdl_drums_midi.cpp  sdl_frequency.cpp  sdl_looper.cpp  sdl_sequencer.cpp  sdl_spectrum.cpp  sdl_test.cpp  sdl_transform.cpp  sdl_window.cpp  visualization.cpp
include/: CMakeLists.txt  iimaudio.h  iimavlib.h  iimavlib_high_api.h
include/iimaudio/: AlsaDevice.h  AudioDevice.h  AudioPlatform.h  AudioPolicies.h  AudioTypes.h  GenericDevice.h  PlatformDefs.h  SDLDevice.h  Utils.h  WaveFile.h  WinMMDevice.h
include/iimavlib/: AlsaDevice.h  AlsaError.h  AlsaSink.h  AlsaSource.h  ArrayTypes.h  AudioDevice.h  AudioFFT.h  AudioFilter.h  AudioPlatform.h  AudioPolicies.h  AudioSample.h  AudioSink.h  AudioTypes.h  FFT.h  GenericDevice.h  PlatformDefs.h  SDLDevice.h  Utils.h  WaveFile.h  WaveSink.h  WaveSource.h  WinMMDevice.h  WinMMError.h  WinMMSink.h  WinMMSource.h  keys.h  video_ops.h  video_types.h
include/iimavlib/artnet/: ARTNet.h  DatagramSocket.h  Socket.h
include/iimavlib/filters/: NullFilter.h  SimpleEchoFilter.h  SineMultiply.h
include/iimavlib/midi/: MidiAlsa.h  MidiDevice.h  MidiGenericDevice.h  MidiPlatform.h  MidiTypes.h  MidiWinMM.h
src/: AlsaDevice.cpp  AlsaError.cpp  AlsaSink.cpp  AlsaSource.cpp  AudioFilter.cpp  AudioSink.cpp  AudioTypes.cpp  CMakeLists.txt  SDLDevice.cpp  Utils.cpp  WaveFile.cpp  WaveSink.cpp  WaveSource.cpp  WinMMDevice.cpp  WinMMError.cpp  WinMMSink.cpp  WinMMSource.cpp  video_ops.cpp
src/artnet/: ARTNet.cpp  DatagramSocket.cpp  Socket.cpp
src/filters/: NullFilter.cpp  SimpleEchoFilter.cpp  SineMultiply.cpp
src/midi/: MidiAlsa.cpp  MidiWinMM.cpp
tests/: CMakeLists.txt  test_fft.cpp  test_main.cpp  test_matrix.cpp
