cmake_minimum_required (VERSION 2.6)
SET(CPACK_SOURCE_GENERATOR TBZ2)
SET(CPACK_PACKAGE_VERSION_MAJOR 0)
SET(CPACK_PACKAGE_VERSION_MINOR 9)
SET(CPACK_PACKAGE_VERSION_PATCH 0)
SET(CPACK_PACKAGE_VENDOR IIM)
SET(CPACK_PACKAGE_CONTACT travnicek@iim.cz)
SET(CPACK_SYSTEM_NAME linux)
SET(CPACK_PACKAGE_NAME iimaudio)
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
SET(CPACK_SOURCE_IGNORE_FILES /.project;/.cproject;/.git/)

INCLUDE(CPack)
INCLUDE(FindPkgConfig)
project (iimaudio)


OPTION (BUILD_SHARED_LIBS "Build shared libraries." ON)
OPTION (BUILD_EXAMPLES "Build example applications" ON)

#SET(CMAKE_BUILD_TYPE RelWithDebInfo)

include_directories( ${CMAKE_SOURCE_DIR}/include )

IF (UNIX)
add_definitions("-Wall -Wextra -pedantic -std=c++0x")
ENDIF ()
find_package(SDL)
add_subdirectory(src)
add_subdirectory(examples)


